[package]
name = "websocket-sans-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nonmax = { version = "0.5.3", default-features = false }

[dev-dependencies]
http-body-util = "0.1.0-rc.3"
hyper = { version = "1.0.0-rc.4", features = ["client", "http1"] }
pin-project-lite = "0.2.13"
pretty_assertions = "1.4.0"
tokio = { version = "1.32.0", features = ["net", "rt", "macros", "io-util", "time"] }
tungstenite = "0.20.1"
