[package]
name = "websocket-sans-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nonmax = { version = "0.5.3", default-features = false }
tinyvec = "1.6.0"

[dev-dependencies]
criterion = "0.5.1"
hex_fmt = "0.3.0"
http-body-util = "0.1.0-rc.3"
hyper = { version = "1.0.0-rc.4", features = ["client", "http1"] }
pin-project-lite = "0.2.13"
pretty_assertions = "1.4.0"
proptest = "1.3.1"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["net", "rt", "macros", "io-util", "time"] }
tungstenite = "0.20.1"

[[bench]]
name = "masking_benchmark"
harness = false

[features]
default=["large_frames"]
large_frames=[]
unoptimised_masking=[]
explicitly_aligned_masking=[]
masking_slice_size_4=[]
masking_slice_size_8=[]
masking_slice_size_16=[]
masking_slice_size_32=[]
