[package]
name = "websocket-sans-io"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vi/websocket-sans-io"
license = "MIT/Apache-2.0"
description = "Low-level WebSocket library"
categories = ["network-programming", "web-programming::websocket", "no-std::no-alloc"]
keywords = ["websocket", "sans-io", "low-level", "no-std", "rfc6455"]

[dependencies]
nonmax = { version = "0.5.3", default-features = false }
tinyvec = "1.6.0"


[features]
default=["large_frames"]
large_frames=[]
unoptimised_masking=[]
explicitly_aligned_masking=[]
masking_slice_size_4=[]
masking_slice_size_8=[]
masking_slice_size_16=[]
masking_slice_size_32=[]

[dev-dependencies]
criterion = "0.5.1"
hex_fmt = "0.3.0"
http-body-util = "0.1.0-rc.3"
hyper = { version = "1.0.0", features = ["client", "http1"] }
pin-project-lite = "0.2.13"
pipe = { version = "0.4.0", features = ["bidirectional"] }
pretty_assertions = "1.4.0"
proptest = "1.3.1"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["net", "rt", "macros", "io-util", "time"] }
tungstenite = "0.20.1"

[[bench]]
name = "masking_benchmark"
harness = false
